# python_plugin_poc

./: README.md  prep.sh  setup.cfg
exp_plugin_code/: my_plugin.py
exp_plugin_code2/: my_second_plugin.py
src/myapp/: myapp.py
src/myapp/internal_plugins/: dummy.py
src/myapp/models/: __init__.py
