[metadata]
name = plugin_poc
version = 0.0.1
author = Nico Coetzee
author_email = nicc777@gmail.com
description = Project to experiment with plugin concepts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://you.com
project_urls =
    Bug Tracker = https://you.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    boto3

[options.entry_points]
console_scripts =
    plugin_poc = myapp.myapp:main

[options.packages.find]
where = src